--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
   <body>
 
-    {% include header-unify.html %}
+    {% include header.html %}
 
     <section data-hook="main" class="container">
       {{ content }}
